# adventofcode

./: .gitignore  Pipfile  README.md  puzzle.sh  pyproject.toml
.tmpl/: util.py
2018/10/: code.py
2018/11/: code.py
2018/12/: code.py
2018/13/: code.py  code_alt.py  test3.txt
2018/14/: code.py
2018/15/: code.py
2018/2/: code.py
2018/3/: code.py
2018/4/: code.py
2018/5/: code.py
2018/6/: code.py  code_alt.py
2018/7/: code.py
2018/8/: code.py
2018/9/: code.py
2018/dayone/: code.py
2019/: puzzle.sh
2019/1/: main.py  util.py
2019/10/: main.py  test_part1.py  test_part2.py
2019/11/: intcode.py  main.py  util.py
2019/2/: main.py  util.py
2019/3/: main.py  util.py
2019/4/: main.py
2019/5/: main.py
2019/6/: main.py
2019/7/: intcode.py  main.py
2019/8/: main.py
2019/9/: intcode.py  main.py  test_incode_day2.py  test_incode_day5.py  test_incode_day9.py
2019/tmpl/: main.py  util.py
