[tool.poetry]
name = "adventofcode"
version = "2019.12.9"
description = "AdventOfCode Attemps"
authors = ["Mathieu AGUESSE <maguesse@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.6"
Pillow = "^6.2"

[tool.poetry.dev-dependencies]
pytest = "^5.3"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
